# struct-ai

./: .dockerignore  .gitignore  .pr_agent.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  pr_analysis.yml
.qodo/workflows/: branch-push-issue-pr-sync.toml
.specstory/: .project.json
doc/: structure.md  testing-openai.md
src/struct_ai/adapters/ai/: anthropic_mentor_adapter.py  base_mentor_adapter.py  google_mentor_adapter.py  mentor_adapter_factory.py  mistral_mentor_adapter.py  ollama_mentor_adapter.py  openai_mentor_adapter.py
src/struct_ai/adapters/config/: yaml_config_reader.py
src/struct_ai/adapters/io/: pathlib_source_file_reader.py
src/struct_ai/adapters/parsers/: python_ast_adapter.py
src/struct_ai/core/entities/: analysis_result.py  config.py  imports.py  rule_type.py  suggestion.py
src/struct_ai/core/exceptions/: exceptions.py
src/struct_ai/core/interfaces/: ai_mentor_port.py
src/struct_ai/core/interfaces/inputs/: config_reader_port.py  source_file_reader_port.py
src/struct_ai/core/interfaces/outputs/: code_parser_port.py
src/struct_ai/core/use_cases/: layer_evaluator.py  layer_resolver.py  review_code_use_case.py
src/struct_ai/entrypoints/cli/: main.py
src/struct_ai/entrypoints/github_action/: main.py
tests/: test_anthropic_mentor_adapter.py  test_github_action_main.py  test_layer_evaluator.py  test_layer_resolver.py  test_main.py  test_mentor_adapter_factory.py  test_ollama_mentor_adapter.py  test_openai_mentor_adapter.py  test_pathlib_source_file_reader.py  test_python_ast_adapter.py  test_review_code_use_case.py  test_yaml_config_reader.py
tests/unit/: test_init.py
tests/unit/adapters/ai/: test_openai_mentor_adapter.py
tests/unit/adapters/io/: test_pathlib_source_file_reader.py
tests/unit/adapters/parsers/: test_python_ast_adapter.py
tests/unit/core/use_cases/: test_layer_evaluator.py  test_layer_resolver.py  test_review_code_use_case.py
tests/unit/entrypoints/cli/: test_main.py
