[project]
name = "struct-ai"
version = "0.1.0"
dependencies = [
    "pydantic",
    "openai",
    "typer",
    "rich",
    "loguru",
]

[project.scripts]
struct-ia = "struct_ai.entrypoints.cli.main:app"

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "mypy", "isort"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
mypy_path = ["src"]
explicit_package_bases = true