[project]
name = "struct-ai"
version = "0.1.0"
dependencies = []

[project.scripts]
struct-ia = "struct_ai.entrypoints.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
mypy_path = ["src"]
explicit_package_bases = true
