[project]
name = "struct-ai"
version = "0.1.0"
dependencies = [
    "pydantic",
    "openai",
    "typer",
    "rich",
    "loguru",
    "pyyaml",
    "requests",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
google = ["google-generativeai>=0.5.0"]
mistral = ["mistralai>=1.0.0"]
# ollama uses only the standard library — no extra package needed
all-providers = [
    "anthropic>=0.25.0",
    "google-generativeai>=0.5.0",
    "mistralai>=1.0.0",
]

[project.scripts]
struct-ia = "struct_ai.entrypoints.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
mypy_path = ["src"]
explicit_package_bases = true
